--- a/HW4/style.css
+++ b/HW4/style.css
@@ -1,7 +1,7 @@
 .title{
     background-color: maroon;
     color: white;
-    margin-left: 380px;
+    margin: 0 auto;
     font-size: 35px;
     font-weight: 800;
     width: 759px;
