--- a/HW6/first/style.css
+++ b/HW6/first/style.css
@@ -24,7 +24,7 @@ ul{
 li{
     width: 100%;
     height: 60px;
-    background-color: #88839E;  
+    background-color: #88839E;
     }
 .Shopping-list {
     width: 100%;
@@ -36,9 +36,9 @@ li{
     font-size: 20px;
 }
 input[type="checkbox"] {
-    width: 25px;
-    height: 25px;
-    margin: 10px;
+    width: 20px;
+    height: 20px;
+    margin: 0 10px 0 10px;
   }
 .footer{
       background-color: #4a4f56;
@@ -47,3 +47,28 @@ input[type="checkbox"] {
       height: 80px;
       padding-top: 30px;
   }
+li:nth-child(2n) {
+      background-color: cadetblue;
+  }
+  .content-in-brackets::before {
+    content: "(";
+    color: #cdcbd6;
+}
+
+.content-in-brackets::after {
+    content: ")";
+    color: #cdcbd6;
+}
+li:hover {
+    background-color: rgba(31, 163, 13, 0.7);
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
+}
+
+li:active {
+    background-color: rgba(238, 120, 120, 0.918);
+}
+input:checked+span {
+    text-decoration: line-through;
+    color: #cdcbd6;
+}
