--- a/HW10/1/style.css
+++ b/HW10/1/style.css
@@ -34,7 +34,7 @@
   
   .header {
     padding: 0 150px ;
-    background: url(/images/img.png) top center;
+    background: url(images/img.png) top center;
     position: relative;
   }
   
